# ngxora

./: .dockerignore  .gitignore  .grype.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  plugins.cfg
.github/workflows/: ci.yml
control-plane/: README.md  go.mod  go.sum
control-plane/api/v1alpha1/: basic_auth_types.go  cors_types.go  ext_authz_types.go  groupversion_info.go  jwt_auth_types.go  rate_limit_types.go  zz_generated.deepcopy.go
control-plane/cmd/ngxora-control-plane/: main.go
control-plane/examples/: backend-tls-policy.yaml  httproute-plugins.yaml  httproute.yaml  quickstart-deployment.yaml
control-plane/internal/attachment/: attachment_test.go  doc.go  listeners.go
control-plane/internal/client/: doc.go  ngxora.go
control-plane/internal/config/: config.go
control-plane/internal/controller/: backend_resolver.go  backend_resolver_test.go  controller_suite_test.go  doc.go  filter_resolution.go  filter_resolution_test.go  filter_status_test.go  httproute_controller.go  integration_test.go  manager.go  programmed_status_test.go  reconciler_test.go  status_applier.go  status_applier_test.go  tls_validator.go  tls_validator_test.go
control-plane/internal/snapshot/: builder.go  doc.go  snapshot_test.go
control-plane/internal/status/: conditions.go
control-plane/internal/translator/: doc.go  httproute.go  httproute_test.go
crates/extensions/basic-auth/: Cargo.toml
crates/extensions/basic-auth/src/: lib.rs
crates/extensions/cors/: Cargo.toml
crates/extensions/cors/src/: lib.rs
crates/extensions/ext-authz/: Cargo.toml
crates/extensions/ext-authz/src/: lib.rs
crates/extensions/headers/: Cargo.toml
crates/extensions/headers/src/: lib.rs
crates/extensions/jwt-auth/: Cargo.toml
crates/extensions/jwt-auth/src/: lib.rs
crates/extensions/rate-limit/: Cargo.toml
crates/extensions/rate-limit/src/: lib.rs
crates/ngxora-cli/src/: main.rs
crates/ngxora-compile/: Cargo.toml
crates/ngxora-compile/src/: block_names.rs  consts.rs  ir.rs  lib.rs  tests.rs  transform.rs  validate.rs
crates/ngxora-config/: Cargo.toml
crates/ngxora-config/src/: ast.rs  include.rs  lexer.rs  lib.rs  parser.rs  tests.rs
crates/ngxora-config/src/fixtures/: golden.conf
crates/ngxora-plugin-api/: Cargo.toml
crates/ngxora-plugin-api/src/: lib.rs
crates/ngxora-plugin-registry/: Cargo.toml
crates/ngxora-plugin-registry/src/: lib.rs
crates/ngxora-runtime/: Cargo.toml  build.rs
crates/ngxora-runtime/examples/: apply_snapshot.rs  get_snapshot.rs  print_protoc_path.rs
crates/ngxora-runtime/proto/: control.proto
crates/ngxora-runtime/src/: cache.rs  control.rs  control_tests.rs  grpc.rs  grpc_tests.rs  le.rs  le_tests.rs  lib.rs  metrics.rs  server.rs  server_tests.rs  tracing.rs  upstreams.rs
crates/ngxora-runtime/src/upstreams/: compile.rs  health.rs  mod.rs  routing.rs  runtime.rs  tests.rs  types.rs
docs/: README.md  config-options.md  control-plane-architecture.md  control-plane-go-implementation-plan.md  feature-checklist.md  gateway-api-policies.md  snapshot-schema.md
docs/adr/: 001-local-grpc-control-plane.md  002-ir-and-snapshot-boundary.md  003-gateway-status-and-condition-model.md  004-tls-validation-strategy.md  005-listener-restart-boundary.md  006-referencegrant-policy.md  007-httproute-extensionref-plugins.md  008-native-filters-as-plugins.md  009-enforce-uniform-backend-protocols.md  README.md
examples/: README.md  docker-compose.yml  ngxora-le.conf  ngxora-tls.conf  ngxora.conf
examples/le/: docker-compose.yml
examples/multi-upstream-demo/: compose.yaml  ngxora.conf
examples/observability/: backend.conf  docker-compose.yml  ngxora.conf  otel-collector-config.yaml  prometheus.yml
sdk/go/: README.md  gen.sh  go.mod  go.sum
sdk/go/ngxora/control/v1/: control.pb.go  control_grpc.pb.go
tools/: Dockerfile
