[package]
name = "ngxora"
version = "0.1.0"
edition = "2024"

[features]
default = ["plugin-headers"]
plugin-headers = ["ngxora-runtime/plugin-headers"]
plugin-basic-auth = ["ngxora-runtime/plugin-basic-auth"]

[dependencies]
arc-swap = "1.8.2"
env_logger = "0.11"
ngxora-config = {path = "crates/ngxora-config"}
ngxora-compile = {path = "crates/ngxora-compile"}
ngxora-runtime = {path = "crates/ngxora-runtime"}
pingora = { version = "0.8.0", default-features = false, features = ["lb", "openssl"] }
pingora-proxy = { version = "0.8.0", default-features = false, features = ["openssl"] }

[[bin]]
name = "ngxora"
test = false
bench = false
path = "crates/ngxora-cli/src/main.rs" 
