[package]
name = "ngxora-plugin-registry"
version = "0.1.0"
edition = "2024"

[features]
default = []
plugin-headers = ["dep:ngxora-extension-headers"]
plugin-basic-auth = ["dep:ngxora-extension-basic-auth"]

[dependencies]
ngxora-extension-headers = { path = "../extensions/headers", optional = true }
ngxora-extension-basic-auth = { path = "../extensions/basic-auth", optional = true }
ngxora-plugin-api = { path = "../ngxora-plugin-api" }
