[package]
name = "ngxora-plugin-registry"
version = "0.1.0"
edition = "2024"

[features]
default = []
plugin-headers = ["dep:ngxora-extension-headers"]
plugin-basic-auth = ["dep:ngxora-extension-basic-auth"]
plugin-rate-limit = ["dep:ngxora-extension-rate-limit"]
plugin-cors = ["dep:ngxora-extension-cors"]
plugin-ext-authz = ["dep:ngxora-extension-ext-authz"]

[dependencies]
ngxora-extension-headers = { path = "../extensions/headers", optional = true }
ngxora-extension-basic-auth = { path = "../extensions/basic-auth", optional = true }
ngxora-extension-rate-limit = { path = "../extensions/rate-limit", optional = true }
ngxora-extension-cors = { path = "../extensions/cors", optional = true }
ngxora-extension-ext-authz = { path = "../extensions/ext-authz", optional = true }
ngxora-plugin-api = { path = "../ngxora-plugin-api" }
