[package]
name = "ngxora-runtime"
version = "0.1.0"
edition = "2024"

[features]
default = ["openssl"]
openssl = ["pingora/openssl", "pingora-proxy/openssl"]
rustls = ["pingora/rustls", "pingora-proxy/rustls"]

[dependencies]
arc-swap = "1.8.2"
async-trait = "0.1.89"
ngxora-compile = { path = "../ngxora-compile" }
pingora = { version = "0.7.0", default-features = false, features = ["lb"] }
pingora-proxy = { version = "0.7.0", default-features = false }
regex = "1"
