[package]
name = "ngxora-runtime"
version = "0.1.0"
edition = "2024"

[features]
default = ["openssl"]
openssl = ["pingora/openssl", "pingora-proxy/openssl"]
plugin-headers = ["ngxora-plugin-registry/plugin-headers"]
rustls = ["pingora/rustls", "pingora-proxy/rustls"]

[dependencies]
arc-swap = "1.8.2"
async-trait = "0.1.89"
http = "1"
ngxora-compile = { path = "../ngxora-compile" }
ngxora-plugin-api = { path = "../ngxora-plugin-api" }
ngxora-plugin-registry = { path = "../ngxora-plugin-registry" }
pingora = { version = "0.8.0", default-features = false, features = ["lb"] }
pingora-proxy = { version = "0.8.0", default-features = false }
regex = "1"

[dev-dependencies]
serde_json = "1"
