[package]
name = "ngxora-runtime"
version = "0.1.0"
edition = "2024"

[features]
default = ["openssl"]
openssl = ["pingora/openssl", "pingora-proxy/openssl"]
plugin-headers = ["ngxora-plugin-registry/plugin-headers"]
plugin-basic-auth = ["ngxora-plugin-registry/plugin-basic-auth"]

[dependencies]
arc-swap = "1.8.2"
async-trait = "0.1.89"
bytes = "1"
futures = "0.3"
http = "1"
hyper-util = { version = "0.1", features = ["tokio"] }
ngxora-compile = { path = "../ngxora-compile" }
ngxora-plugin-api = { path = "../ngxora-plugin-api" }
ngxora-plugin-registry = { path = "../ngxora-plugin-registry" }
pingora = { version = "0.8.0", default-features = false, features = ["lb"] }
pingora-proxy = { version = "0.8.0", default-features = false }
prost = "0.13"
regex = "1"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = { version = "0.12", default-features = false, features = ["transport", "codegen", "prost"] }
tower = "0.5"
url = "2"
protoc-bin-vendored = "3"

[dev-dependencies]

[build-dependencies]
protoc-bin-vendored = "3"
tonic-build = "0.12"
