[package]
name = "ngxora-extension-ext-authz"
version = "0.1.0"
edition = "2024"

[dependencies]
ngxora-plugin-api = { path = "../../ngxora-plugin-api" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http = "1"
log = "0.4"
