[package]
name = "ngxora-extension-jwt-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
ngxora-plugin-api = { path = "../../ngxora-plugin-api" }
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http = "1"
log = "0.4"
time = "=0.3.36"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
