[package]
name = "ngxora-extension-jwt-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
ngxora-plugin-api = { path = "../../ngxora-plugin-api" }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http = "1"
log = "0.4"
time = "0.3.47"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
